# -2026

./: .gitignore  README.md
lab2/: README.md  data_analysis.ipynb  power_consumption.ipynb  requirements.txt
lab3/: README.md  visualization.ipynb
lab4/: README.md  lab4.ipynb  requirements.txt
lab5/: README.md  app.py
lab6/: CMakeLists.txt  README.md  build.sh  preinstall.sh
lab6/include/: CameraProvider.hpp  KeyProcessor.hpp
lab6/src/: CameraProvider.cpp  FrameProcessor.cpp  main.cpp
lab7/: .gitignore  CMakeLists.txt  README.md  preinstall.sh  run.sh
lab7/include/: Display.hpp  FaceDetector.hpp  KeyProcessor.hpp
lab7/src/: Display.cpp  FaceDetector.cpp  FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
